TEST: Googletest and unit test Makefile added

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "lib/minim"]
 	path = lib/minim
 	url = https://github.com/sjavis/minim
+[submodule "test/googletest"]
+	path = test/googletest
+	url = https://github.com/google/googletest
+        ignore = dirty
