Added debug Makefile target

--- a/example/Makefile
+++ b/example/Makefile
@@ -4,10 +4,13 @@ BIN = $(ROOT_DIR)/bin
 LIBS = -lellib -lminim
 
 CXX = mpic++
-CXXFLAGS = -I$(INC) -L$(BIN) $(LIBS) -Wall -DPARALLEL -g
+CXXFLAGS = -I$(INC) -L$(BIN) $(LIBS) -Wall -DPARALLEL
 
 all:
 	$(CXX) example.cpp -o run.exe $(CXXFLAGS)
+
+debug: CXXFLAGS += -g
+debug: all
 
 clean:
 	rm run.exe
