--- a/test/Makefile
+++ b/test/Makefile
@@ -21,7 +21,7 @@ clean:
 	rm -f $(TESTS) gtest.a gtest_main.a *.o
 
 $(RUN_TESTS): run_%: %
-	mpirun -np 2 $<
+	-mpirun -np 2 $<
 
 # Googletest rules and parameters, see:
 # https://github.com/google/googletest/blob/release-1.8.1/googletest/make/Makefile
@@ -29,9 +29,14 @@ GTEST_DIR = googletest/googletest
 CPPFLAGS += -isystem $(GTEST_DIR)/include
 GTEST_HEADERS = $(GTEST_DIR)/include/gtest/*.h $(GTEST_DIR)/include/gtest/internal/*.h
 GTEST_SRCS_ = $(GTEST_DIR)/src/*.cc $(GTEST_DIR)/src/*.h $(GTEST_HEADERS)
+# Googletest with MPI
+# https://github.com/LLNL/gtest-mpi-listener
+GTEST_MPI_DIR = gtest-mpi-listener
+INC += -I$(GTEST_MPI_DIR)/include
 
 gtest:
 	git submodule update --init $(dir $(GTEST_DIR))
+	git submodule update --init $(dir $(GTEST_MPI_DIR))
 
 gtest-all.o: $(GTEST_SRCS_)
 	$(CXX) $(CPPFLAGS) -I$(GTEST_DIR) $(CXXFLAGS) -c $(GTEST_DIR)/src/gtest-all.cc
