--- a/examples/genalg/Makefile
+++ b/examples/genalg/Makefile
@@ -1,7 +1,7 @@
 ROOT_DIR = ../..
 INC = $(ROOT_DIR)/include
 BIN = $(ROOT_DIR)/bin
-LIBS = -lellib -lminim
+LIBS = -lellib
 
 CXX = mpic++
 CXXFLAGS = -I$(INC) -L$(BIN) $(LIBS) -Wall -DPARALLEL
